--- a/app/views/admin/categories/_category_index.html.erb
+++ b/app/views/admin/categories/_category_index.html.erb
@@ -18,16 +18,16 @@
 		<!-- 메인 카테고리 반복 시작 -->
 		<% @categories.each do |category| %>
 		<li id="cate_<%= category.id.to_s %>" class="main-category-list">
-			<h4><%= category.name %></h4>
-			<p class="main-category-action"><a class="edit">수정</a><a id="cate.del_<%= category.id.to_s %>" class="delete">삭제</a></p>
+			<h4 id="cate_name_<%= category.id.to_s %>"><%= category.name %></h4>
+			<p class="main-category-action"><a id="cate-edit_<%= category.id.to_s %>" class="edit"></a><a id="cate-del_<%= category.id.to_s %>" class="delete">삭제</a></p>
 			<ul id="sortables_<%= category.id.to_s %>">
 				<!-- 서브 카테고리 반복될 부분 시작 -->
 				<% @categories.subcategories(:order => [ :priority]).each do |subcategory| 
 					if category.id == subcategory.category_id
 				%>
 				<li id="subcate_<%= subcategory.id.to_s %>" class="sub-category-list">
-					<h5><%= subcategory.name %></h5>
-					<p class="sub-category-action"><a class="edit">수정</a><a id="subcate.del_<%= subcategory.id.to_s %>" class="delete">삭제</a></p>
+					<h5 id="subcate_name_<%= subcategory.id.to_s %>"><%= subcategory.name %></h5>
+					<p class="sub-category-action"><a id="subcate-edit_<%= subcategory.id.to_s %>" class="edit">수정</a><a id="subcate-del_<%= subcategory.id.to_s %>" class="delete">삭제</a></p>
 				</li>
 				<% end %>
 			<!-- 서브 카테고리 반복될 부분 끝 -->
@@ -51,7 +51,7 @@ $(document).ready(function(){
 	$('#sortables').click(function(event){
 		if ( $(event.target).is('.delete') ){
 			var temp_id = event.target.id.split("_");
-			if (temp_id[0] == "cate.del"){
+			if (temp_id[0] == "cate-del"){
 				var confirm_message = "카테고리를 정말 삭제하시겠습니까?\n카테고리가 삭제되면 해당 카테고리에 속하는 \n모든 서브카테고리들도 함께 삭제됩니다!"
 			}else{
 				var confirm_message = "서브카테고리를 정말 삭제하시겠습니까?"				
@@ -64,12 +64,7 @@ $(document).ready(function(){
 					type:'post', 
 					url:'/admin/categories/delete_category',
 					success: function(request){
-						
-						
-						
-						
-						// $('#epub_make').html(request);
-						if (temp_id[0] == "cate.del"){
+						if (temp_id[0] == "cate-del"){
 							$('#cate_'+temp_id[1]).slideUp('fast',function(){$(this).remove()})
 						}else{
 							$('#subcate_'+temp_id[1]).slideUp('fast',function(){$(this).remove()})
@@ -78,6 +73,47 @@ $(document).ready(function(){
 				});
 			};			
 		};
+		
+		if ( $(event.target).is('.edit-complete') ){
+			var temp_id = event.target.id.split("_");
+			
+			if (temp_id[0] == "cate-edit"){
+				$('#cate-edit_'+temp_id[1]).removeClass('edit-complete').addClass('edit');
+				var category_name = $('#cate-input_'+temp_id[1]).val();
+			}else{
+				$('#subcate-edit_'+temp_id[1]).removeClass('edit-complete').addClass('edit');
+				var category_name = $('#subcate-input_'+temp_id[1]).val();
+			}
+			$.ajax({
+				data:'category_name='+category_name+'&category_id='+ event.target.id, 
+				dataType:'script', 
+				type:'post', 
+				url:'/admin/categories/update_category',
+				success: function(request){
+					if (temp_id[0] == "cate-edit"){
+						$('#cate_name_'+temp_id[1]).text($('#cate-input_'+temp_id[1]).val());
+					}else{
+						$('#subcate_name_'+temp_id[1]).text($('#subcate-input_'+temp_id[1]).val());
+					}
+				}
+			});
+			event.stopPropagatoin();
+		};	
+
+		if ( $(event.target).is('.edit') ){
+			var temp_id = event.target.id.split("_");
+			if (temp_id[0] == "cate-edit"){
+				// $('#cate-edit_'+temp_id[1]).removeClass("edit");
+				$('#cate-edit_'+temp_id[1]).removeClass('edit').addClass('edit-complete');
+				$('#cate_name_'+temp_id[1]).html("<input id='cate-input_"+temp_id[1]+"' type='text' value='"+$('#cate_name_'+temp_id[1]).text()+"'>&nbsp;");
+				
+			}else{
+				$('#subcate-edit_'+temp_id[1]).removeClass('edit').addClass('edit-complete');
+				$('#subcate_name_'+temp_id[1]).html("<input id='subcate-input_"+temp_id[1]+"' type='text' value='"+$('#subcate_name_'+temp_id[1]).text()+"'>&nbsp;");
+			}
+		};	
+		
+		
 	});
 	
 	$('#add_category').click(function() {
@@ -168,3 +204,6 @@ $(document).ready(function(){
 	  return result;
 	}	
  </script>
+
+<div id="created_category"></div>
+<div id="created_subcategory"></div>
