--- a/app/views/admin/categories/_created_subcategory.html.erb
+++ b/app/views/admin/categories/_created_subcategory.html.erb
@@ -7,5 +7,27 @@ var html_str = "<li id='subcate_<%= subcategory.id.to_s %>' class='sub-category-
 				"<p class='sub-category-action'><a id='subcate-edit_<%= subcategory.id.to_s %>'"+ "class='edit'>수정</a><a id='subcate-del_<%= subcategory.id.to_s %>' class='delete'>삭제</a></p>"+
 				"</li>";
 $('#sortables_<%= category_id %>').append(html_str);
+
+$('#subcategory-write_<%= @category_id %>').val("");
+
+$("#sortables_<%= category_id.to_s %>").sortable({
+   update: function(event, ui) { 
+	<%= remote_function(:url  => {:action => "subcategory_order_update"},:with => "'category_id=#{category_id.to_s}&subcategory_id='+result_category_#{category_id.to_s}()") %>
+	}
+});
+
+ $(function() {
+    $("#sortables_<%= category_id.to_s %>").sortable({axis: 'y' });
+ });
+				
+function result_category_<%= category_id.to_s %>(){
+  var result = new Array();
+  result = $('#sortables_<%= category_id.to_s %>').sortable('toArray');
+  return result;
+}
 				
 </script>
+
+
+
+
