--- a/app/views/temps/_temp_show.html.erb
+++ b/app/views/temps/_temp_show.html.erb
@@ -36,8 +36,10 @@ if File.exist?(RAILS_ROOT + "/public" + @temp.preview_url)
 
 
 
-<p5><a href="#"><%= Category.get(@temp.category.id).name %></a>
-	<a class="on" href="#">&nbsp;&nbsp;>&nbsp;<%= @temp.subcategory %></a>  
+<p5><a href="#"><%= Category.get(@temp.category.id).name if !Category.get(@temp.category.id).nil? %></a>
+	<% if !Subcategory.get(@temp.subcategory.id).nil?%>
+	<a class="on" href="#">&nbsp;&nbsp;>&nbsp;<%= Subcategory.get(@temp.subcategory.id).name %></a>  
+	<% end %>
 
 </p5>
 
