--- a/app/views/temps/_temp_index.html.erb
+++ b/app/views/temps/_temp_index.html.erb
@@ -8,8 +8,6 @@
 <!-- image_tag("/icons/icon.gif", :height => '32', :width => '32')  -->
 
 <script type="text/javascript" language="javascript">
-
-
 	function show_progress() {
 		var width = 100;
 		var height = 100;
@@ -30,60 +28,6 @@
 </script>
 <%= stylesheet_link_tag '/css/slideimg.css' %>
 
-<!-- Best Template section start -->
-<% if @temps_best != nil and @temps_best.length > 0 %>
-<div >
-<!-- "previous page" action -->
-	<div class="bestbg">
-	<a class="prevPage browse left"></a>
-
-	<!-- root element for scrollable -->
-<div class="scrollable" id=chained>
-	
-		<!-- root element for the items -->
-		<div class="items">
-		<%@temps_best.each do |best|  %>
-			<img  class="link_img" rel="/temps/<%=best.id%>?search=<%=params[:search]%>&page=<%=params[:page]%>" src="<%=best.thumb_url%>" />
-		<%end  %>
-	
-		</div>
-	
-	</div>
-	<!-- "next page" action -->
-	<a class="nextPage browse right"></a>
-	</div>
-
-	<!-- javascript coding -->
-	<script>
-	// What is $(document).ready ? See: http://flowplayer.org/tools/using.html#document_ready
-	$(document).ready(function() {
-
-	// heeeeeeeeeeere we go.
-	$("#chained").scrollable({hoverClass: 'hover'}).circular().navigator().autoscroll({
-		steps: 2,
-		interval: 3000		
-	});	
-	
-	$(".link_img").click(function(){ 
-	   var gotoHref = $(this).attr('rel'); 
-	   window.location = gotoHref; 
-	});
-	});
-	
-
-	
-	</script>
-	
-
-		
-</div>
-
-
-
-<div style="height:20;clear:both">
-</div>
-<%end %>		
-<!-- Best Template section end -->
 <%
 @temp = 1 
 @temps.each do |my| %>
@@ -143,34 +87,49 @@
 <% @temp += 1
 end%>
 
-<% if @temps.count > 0%>			
+<% if @temps.length > 0%>			
 <!-- dm-pager Pagination -->
-	<% form_tag request.path + "?page=#{params[:page]}", :method => 'get' do %>			
+	<% form_tag request.path + "?category=#{params[:category]}&subcategory=#{params[:subcategory]}&page=#{params[:page]}", :method => 'get' do %>			
 	<table width= "730">
 		<tr>
 			<td width="350">
 				<div class="pager">
 					<%
 					if params[:category_name] != nil
-						@category_name = Category.get(params[:category_name].to_i).name
-						puts_message @category_name
-					end
-					if params[:subcategory_name] != nil
-				    	@subcategory_name = Subcategory.get(params[:subcategory_name].to_i).name
-						puts_message @subcategory_name
-					end
+			      		@category_name = params[:category_name].to_i
+			    	end
+			    	if params[:subcategory_name] != nil
+			      		# @subcategory_name = Subcategory.get(params[:subcategory_name].to_i).name
+			      		@subcategory_name = params[:subcategory_name].to_i
+			    	end
 
 	      			if signed_in?
-					    if @category_name != nil and @subcategory_name != nil%>
-					      <%= Temp.all(:category => @category_name, :subcategory => @subcategory_name).isopen(current_user.userid).search(params[:search], params[:page]).pager.to_html "/temps?category_name=#{params[:category_name]}&subcategory_name=#{params[:subcategory_name]}&search=#{params[:search]}" %>
-					    <% elsif @category_name != nil %>
-					      <%= Temp.all(:category => @category_name).isopen(current_user.userid).search(params[:search], params[:page]).pager.to_html "/temps?category_name=#{params[:category_name]}&search=#{params[:search]}" %>      
-					    <% elsif  @subcategory_name != nil %>
-					      <%= Temp.all(:subcategory => @subcategory_name).isopen(current_user.userid).search(params[:search], params[:page]).pager.to_html "/temps?subcategory_name=#params[:subcategory_name]}&search=#{params[:search]}" %>      
-					    <%else %>
-					      <%= Temp.all().isopen(current_user.userid).search(params[:search], params[:page]).pager.to_html "/temps?search=#{params[:search]}" %>      
-					    <% end 
-					end%>				
+						if TEMPLATE_OPEN_FUNC_TOGGLE == true
+							if @category_name != nil and @subcategory_name != nil %>
+					           <%= Temp.all(:category => @category_name, :subcategory => @subcategory_name).isopen(current_user.userid).search(params[:search], params[:page]).pager.to_html "/temps?category_name=#{params[:category_name]}&subcategory_name=#{params[:subcategory_name]}&search=#{params[:search]}" %>
+					        <% elsif @category_name != nil %>
+					          <%= Temp.all(:category => @category_name).isopen(current_user.userid).search(params[:search], params[:page]).pager.to_html "/temps?category_name=#{params[:category_name]}&search=#{params[:search]}" %>      
+					        <% elsif  @subcategory_name != nil %>
+					          <%= Temp.all(:subcategory => @subcategory_name).isopen(current_user.userid).search(params[:search], params[:page]).pager.to_html "/temps?subcategory_name=#params[:subcategory_name]}&search=#{params[:search]}" %>      
+					        <% else 
+					          @category_name = Category.first(:priority => 1).name %>
+					          <%= Temp.all(:category => @category_name).isopen(current_user.userid).search(params[:search], params[:page])%>      
+					        <% end %>
+						<%else
+							if @category_name != nil and @subcategory_name != nil %>
+					           <%= Temp.all(:category => @category_name, :subcategory => @subcategory_name).search(params[:search], params[:page]).pager.to_html "/temps?category_name=#{params[:category_name]}&subcategory_name=#{params[:subcategory_name]}&search=#{params[:search]}" %>
+					        <% elsif @category_name != nil %>
+					          <%= Temp.all(:category => @category_name).search(params[:search], params[:page]).pager.to_html "/temps?category_name=#{params[:category_name]}&search=#{params[:search]}" %>      
+					        <% elsif  @subcategory_name != nil %>
+					          <%= Temp.all(:subcategory => @subcategory_name).search(params[:search], params[:page]).pager.to_html "/temps?subcategory_name=#params[:subcategory_name]}&search=#{params[:search]}" %>      
+					        <% else 
+					          @category_name = Category.first(:priority => 1).name %>
+					          <%= Temp.all(:category => @category_name).search(params[:search], params[:page])%>      
+					        <% end %>
+						<% end %>
+						
+				        
+					<%end%>				
 
 				</div></td>
 			<td width="230">
