--- a/app/views/admin/myimages/myimage.html.erb
+++ b/app/views/admin/myimages/myimage.html.erb
@@ -4,7 +4,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="/css/admin.css" media="screen" rel="stylesheet" type="text/css"/>
 <link href="/css/admin_main.css" media="screen" rel="stylesheet" type="text/css"/>
-<link href="/css/admin_style.css" media="screen" rel="stylesheet" type="text/css" />	
+<link href="/css/admin_style.css" media="screen" rel="stylesheet" type="text/css" />
+<script src="/js/jquery_1.4.2/jquery-1.4.2.js" type="text/javascript" charset="utf-8"></script>	
 </head>
 <body>
 
