--- a/app/views/admin/temps/_temp_image_new.html.erb
+++ b/app/views/admin/temps/_temp_image_new.html.erb
@@ -1,6 +1,6 @@
 <h1>New myimage</h1>
 
-<% form_for @myimage, :html => {:multipart => true} do |f| %>
+<% form_for @myimage,:url => admin_myimages_path, :html => {:multipart => true} do |f| %>
   <%= f.error_messages %>
 
   <p>
@@ -12,8 +12,8 @@
     <%= f.file_field :image_file %>
   </p>
   <p>
-    <%= f.submit '이미지 업로드' %>
+    <%= f.submit '업로드' %>
   </p>
 <% end %>
 
-<%= link_to '목록', "/admin/myimages" %>
+<a href="Javascript:history.back(-1);">목록으로 돌아가기</a>
