--- a/app/views/admin/temps/temp.html.erb
+++ b/app/views/admin/temps/temp.html.erb
@@ -6,7 +6,7 @@
 <link href="/css/admin.css" media="screen" rel="stylesheet" type="text/css"/>
 <link href="/css/admin_main.css" media="screen" rel="stylesheet" type="text/css"/>
 <link href="/css/admin_style.css" rel="stylesheet" type="text/css" />
-
+<script src="/js/jquery_1.4.2/jquery-1.4.2.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
 
@@ -44,7 +44,7 @@
 				<div class="box">
 						<div id="admin_contents">
 							<div id="admincontents_wrapper">
-								<%= render :partial => "/admin/temps/#{@board}_#{@section}" %>
+								<%= render :partial => "/admin/temps/#{@board}_#{@section}", :object => @myimages, :object => @total_count %>
 							</div>
 						</div>
 					</div>
