--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
 <META http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-<script src="/js/other_libs/jquery-1.3.2.js" type="text/javascript" charset="utf-8"></script>
+<script src="/js/jquery_1.4.2/jquery-1.4.2.js" type="text/javascript" charset="utf-8"></script>
 <link href="/css/main.css" media="screen" rel="stylesheet" type="text/css"/>
 <link href="/css/style.css" media="screen" rel="stylesheet" type="text/css" />
 <link href="/css/order.css" media="screen" rel="stylesheet" type="text/css" />	
