--- a/app/views/admin/myimages/_myimage_index.html.erb
+++ b/app/views/admin/myimages/_myimage_index.html.erb
@@ -82,7 +82,11 @@
 				<td width="230">&nbsp;</td>
 				<td width="350" style="align:center">
 					<div class="pager">
-					<%=Myimage.search_user(params[:search], params[:page]).pager.to_html "/admin/myimages?search=#{params[:search]}" %>
+					<%if params[:ext] != nil and params[:ext] != "" and params[:ext] != "all"%>
+						<%= Myimage.search_user(params[:search], params[:page]).pager.to_html "/admin/myimages?search=#{params[:search]}" %>
+					<%else %>
+						<%= Myimage.all(:type => params[:ext]).search_user(params[:search], params[:page]).pager.to_html "/admin/myimages?search=#{params[:search]}" %>
+					<%end %>
 					</div>
 				</td>
 				<td width="150" align="right">
