--- a/app/views/admin/temps/_temp_image_show.html.erb
+++ b/app/views/admin/temps/_temp_image_show.html.erb
@@ -3,7 +3,7 @@
 
   <b>이미지명:</b><%=h @myimage.name %><br>
 
-  <b>관리자 아이디:</b><%=h Myadmin.get(@myimage.user_id.to_s).admin_id %><br>
+  <b>관리자 아이디:</b><%=h Myadmin.get(@myimage.admin_id.to_s).admin_id %><br>
 
   <b>이름:</b><%=h Myadmin.get(@myimage.user_id.to_s).name %><br>
 
