--- a/app/views/admin/mytemplates/_mytemplate_index.html.erb
+++ b/app/views/admin/mytemplates/_mytemplate_index.html.erb
@@ -57,7 +57,7 @@
 					<%
 					if mytemplate.category != nil and mytemplate.subcategory != nil
 						if Category.get(mytemplate.category.to_i) == nil or Subcategory.get(mytemplate.subcategory.to_i) == nil
-							category_str = "카테고리 설정해주세요!"
+							category_str = ""
 						else
 							category_str = Category.get(mytemplate.category.to_i).name + "/" + Subcategory.get(mytemplate.subcategory.to_i).name
 						end	
